--- a/src/main/json/manifest.json
+++ b/src/main/json/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Shikimori Online",
-  "version": "1.0",
-  "description": "",
+  "version": "1.0.0",
+  "description": "The extension provides access to archive videos",
   "manifest_version": 2,
   "permissions": [
     "activeTab",
